--- a/lang/zh-CN.yml
+++ b/lang/zh-CN.yml
@@ -17,7 +17,7 @@ zh-CN:
  INPUT_PASSWORD_TO_ENCRYPT: "请输入一个密码用于加密 \"{}\"（输入会被隐藏）："
  INPUT_PASSWORD_TO_DECRYPT: "请输入一个密码用于解密 \"{}\"（输入会被隐藏）："
  DONE: "完成。"
- START_AGTH_FROM: "从路径 \"{}\" 启动 AGTH。"
+ START_AGTH_FROM: "从路径 \"{}\" 启动 AGTH。启动参数为：\"{}\""
  INVALID_TARGET: "无效的操作：\"{}\"。退出。"
  LOG_WONT_BE_SAVED: "\"-d, --disable\" 选项已激活。历史记录不会被保存至磁盘中。"
  TTS_PLAYING_WITH_VOICE: "TTS 正在使用声音 \"{}\" 播放。"
