Fix: monitor interval not work New: --number option

--- a/cp2trans/lang/en.yml
+++ b/cp2trans/lang/en.yml
@@ -16,6 +16,8 @@ en:
  INPUT_NEW_PASSWORD: "Input new password (won't be displayed):"
  INPUT_PASSWORD_TO_ENCRYPT: "Input a password to encrypt \"{}\" (won't be displayed): "
  INPUT_PASSWORD_TO_DECRYPT: "Input the password to decrypt \"{}\" (won't be displayed): "
+ START_MONITORING: "Start monitoring clipboard..."
+ OVER_CHARACTERS: "Over {} characters. Pass..."
  DONE: "done."
  START_AGTH_FROM: "Start agth from: \"{}\" with parameters: \"{}\""
  INVALID_TARGET: "Invalid target \"{}\". Exit."
@@ -31,6 +33,7 @@ en:
  HELP_SOURCE: "Source language code. Romkan will only be shown with \"ja\"."
  HELP_TARGET: "Primary uses Youdao API and the secondary by AWS translate API."
  HELP_DISABLE: "Disable AWS translate api in low network connection environment. Log won't be recorded into disk (but will be in memory) if set."
+ HELP_NUMBER: "Translate only if number of characters less than <number>."
  HELP_INTERVAL: "Time interval in seconds to check the clipboard."
  HELP_AGTH: "Start AGTH text hook. \"agth_path\" must be specified. You might also have to specify -o option."
  HELP_OPT: "Extra options passed to \"agth.exe\". See details by the help button of \"agth.exe\" window."
