--- a/cp2trans/lang/zh-CN.yml
+++ b/cp2trans/lang/zh-CN.yml
@@ -16,6 +16,8 @@ zh-CN:
  INPUT_NEW_PASSWORD: "请输入新密码（输入会被隐藏）："
  INPUT_PASSWORD_TO_ENCRYPT: "请输入一个密码用于加密 \"{}\"（输入会被隐藏）："
  INPUT_PASSWORD_TO_DECRYPT: "请输入一个密码用于解密 \"{}\"（输入会被隐藏）："
+ START_MONITORING: "开始监控剪贴板..."
+ OVER_CHARACTERS: "超过 {} 个字符。略过..."
  DONE: "完成。"
  START_AGTH_FROM: "从路径 \"{}\" 启动 AGTH。启动参数为：\"{}\""
  INVALID_TARGET: "无效的操作：\"{}\"。退出。"
@@ -31,6 +33,7 @@ zh-CN:
  HELP_SOURCE: "源文字语言代码。仅当此选项为 \"ja\" 时，会显示罗马音。"
  HELP_TARGET: "目标语言代码。前一个目标语言使用有道智云 API，后一个使用 AWS Translate API。"
  HELP_DISABLE: "激活此选项以在网络状况不佳的情况下禁用 AWS Translate APT。如果这样做也会导致记录不会被保存至磁盘（但会暂存于内存）。"
+ HELP_NUMBER: "仅当剪贴板字符个数小于此值时翻译。"
  HELP_INTERVAL: "检查剪贴板内容是否发生变化的时间间隔。"
  HELP_AGTH: "启动 AGTH 文本提取进程。必须指定 AGTH 可执行文件的路径。您很可能需要同时指定 \"-o, --opt\" 选项。"
  HELP_OPT: "\"agth.exe\" 的额外启动参数。您可以通过点击 \"agth.exe\" 程序窗口的 \"help\" 按钮获取详情。"
