--- a/cp2trans/lang/en.yml
+++ b/cp2trans/lang/en.yml
@@ -2,7 +2,9 @@ en:
  PROGRAM_DESCRIPTION: "Clipboard to Translate."
  YOUDAO_API_ERROR: "Youdao API error: {}"
  YOUDAO_TTS_ERROR: "Youdao TTS API error: {}"
- CREATE_A_NOT_EXISTS_FILE: "File \"{}\" not exists. Will create a new one when exit."
+ AWS_API_ERROR: "AWS API error：{}"
+ GOOGLE_API_ERROR: "Google API error: {}"
+ CREATE_A_NOT_EXISTS_FILE: "File \"{}\" not exists. Will create a new one when exit normally."
  ACCESS_READONLY_PROPERTY: "Attempt to set a readonly property \"{}\"."
  WRONG_PASSWORD: "Failed to load \"{}\" with a wrong password."
  PASSWORD_NOT_SPECIFIED: "\"{}\" maybe encrypted. Use --encrypt option to specify password."
@@ -21,7 +23,7 @@ en:
  DONE: "done."
  START_AGTH_FROM: "Start agth from: \"{}\" with parameters: \"{}\""
  INVALID_TARGET: "Invalid target \"{}\". Exit."
- LOG_WONT_BE_SAVED: "The \"--disable\" option triggered. So logs won't be saved."
+ LOG_WONT_BE_SAVED: "The \"--disable\" option triggered. So the corresponding logs will be saved as null."
  TTS_PLAYING_WITH_VOICE: "TTS starts playing with voice \"{}\"."
  REQUEST_FINISHED_IN: "\"{}\" finished request in {} seconds. Maybe suffered from bad network environment."
  HELP_PASSED: "Change password of an encrypted log_file or encrypt/decrypt log_file and exit."
@@ -31,8 +33,8 @@ en:
  HELP_TTS: "Voice of TTS. \"0\" for male and \"1\" for female. Unset for disable TTS."
  HELP_MATCH: "Only TTS when match <pattern>."
  HELP_SOURCE: "Source language code. Romkan will only be shown with \"ja\"."
- HELP_TARGET: "Primary uses Youdao API and the secondary by AWS translate API."
- HELP_DISABLE: "Disable AWS translate api in low network connection environment. Log won't be recorded into disk (but will be in memory) if set."
+ HELP_TARGET: "Three target language codes used by youdao, aws and google. Separated by comma."
+ HELP_DISABLE: "Disable specified translate engine. Corresponding results will be saved as null"
  HELP_NUMBER: "Translate only if number of characters less than <number>."
  HELP_INTERVAL: "Time interval in seconds to check the clipboard."
  HELP_AGTH: "Start AGTH text hook. \"agth_path\" must be specified. You might also have to specify -o option."
