--- a/cp2trans/lang/zh-CN.yml
+++ b/cp2trans/lang/zh-CN.yml
@@ -2,7 +2,9 @@ zh-CN:
  PROGRAM_DESCRIPTION: "翻译来自剪贴板的内容。"
  YOUDAO_API_ERROR: "有道 API 错误：{}"
  YOUDAO_TTS_ERROR: "有道 TTS API 错误：{}"
- CREATE_A_NOT_EXISTS_FILE: "文件 \"{}\" 不存在。程序退出时将会被创建。"
+ AWS_API_ERROR: "AWS API 错误：{}"
+ GOOGLE_API_ERROR: "Google API 错误：{}"
+ CREATE_A_NOT_EXISTS_FILE: "文件 \"{}\" 不存在。程序正常退出时将会被创建。"
  ACCESS_READONLY_PROPERTY: "试图更改只读变量 \"{}\" 的值。"
  WRONG_PASSWORD: "读取文件 \"{}\" 时使用了错误的密码。"
  PASSWORD_NOT_SPECIFIED: "\"{}\" 可能是一个加密的文件。使用 --encrypt 参数指定解密密码。"
@@ -21,7 +23,7 @@ zh-CN:
  DONE: "完成。"
  START_AGTH_FROM: "从路径 \"{}\" 启动 AGTH。启动参数为：\"{}\""
  INVALID_TARGET: "无效的操作：\"{}\"。退出。"
- LOG_WONT_BE_SAVED: "\"-d, --disable\" 选项已激活。历史记录不会被保存至磁盘中。"
+ LOG_WONT_BE_SAVED: "\"-d, --disable\" 选项已激活。对应结果会被存储为null。"
  TTS_PLAYING_WITH_VOICE: "TTS 正在使用声音 \"{}\" 播放。"
  REQUEST_FINISHED_IN: "\"{}\" 经过 {} 秒完成了请求。您的网络状况可能不佳。"
  HELP_PASSED: "更改被加密的 log_file 的密码，或者对其进行加密/解密。"
@@ -31,8 +33,8 @@ zh-CN:
  HELP_TTS: "TTS 所使用的语音。\"0\" 代表男性发音，\"1\"代表女性发音。不设置此选项则不会启用 TTS 功能。"
  HELP_MATCH: "仅当源文本匹配 pattern 时进行 TTS。"
  HELP_SOURCE: "源文字语言代码。仅当此选项为 \"ja\" 时，会显示罗马音。"
- HELP_TARGET: "目标语言代码。前一个目标语言使用有道智云 API，后一个使用 AWS Translate API。"
- HELP_DISABLE: "激活此选项以在网络状况不佳的情况下禁用 AWS Translate APT。如果这样做也会导致记录不会被保存至磁盘（但会暂存于内存）。"
+ HELP_TARGET: "三个目标语言代码，分别被有道智云 API 、AWS 翻译引擎和 Google 翻译 API 使用。之间使用半角逗号隔开。"
+ HELP_DISABLE: "去使能相应的翻译引擎，相应的结果将会被存储为null。"
  HELP_NUMBER: "仅当剪贴板字符个数小于此值时翻译。"
  HELP_INTERVAL: "检查剪贴板内容是否发生变化的时间间隔。"
  HELP_AGTH: "启动 AGTH 文本提取进程。必须指定 AGTH 可执行文件的路径。您很可能需要同时指定 \"-o, --opt\" 选项。"
